# EKAI

ERD_automation/codes/DiscoveringForeignKeysOnWebTablesWithTheCrowd/: featureExtraction.ipynb
ERD_automation/codes/HolisticPrimaryAndForeignKeyDetection/: attribute.py  ind.py  main.ipynb  main.py  main2.py  zeroAI.ipynb
ERD_automation/codes/HolisticPrimaryAndForeignKeyDetection/results/: menagerie-db.json
ERD_automation/codes/inclusionDependencyWithSpider/: spider.py
ERD_automation/codes/inclusionDependencyWithSpider/spider_results/: employee-db.txt  employee.txt  kms-db.txt  kms.txt  menagerie-db.txt  menagerie.txt  northwind-db.txt  northwind.txt  sakila-db.txt  sakila.txt
ERD_automation/codes/my_automation/: pyproject.toml
ERD_automation/codes/my_automation/my_automation/: Database.py  ERD_automator.py  SimilarityCalculator.py  attribute.py  compartmentalization.py  ind.py  main.py
ERD_automation/codes/my_automation/tests/: attribute_test.py  inds_test.py  main_test.py
