[tool.poetry]
name = "my-automation"
version = "0.1.0"
description = ""
authors = ["Haseeb Muhammad <huhammad.bscs22seecs@seecs.edu.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
datasketch = "^1.6.5"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"
openai = "^1.97.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
